k8s/apps/network/cilium/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: cilium
  labels:
    app.kubernetes.io/name: hubble-ui
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hubble.emnt.dev`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: hubble-ui
          namespace: cilium
          port: 80
    - kind: Rule
      match: "Host(`hubble.emnt.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik
          namespace: authentik
          port: 9000
